# productapi

./: .demo.env  .gitignore  .style.yapf  Procfile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
amazon/: admin.py  models.py  routers.py  serializers.py  urls.py  viewsets.py
amazon/migrations/: 0001_initial.py  0002_availability_mobile_specification_and_more.py
api/: routers.py  serializers.py  urls.py  viewsets.py
flipkart/: admin.py  models.py  routers.py  serializers.py  urls.py  viewsets.py
flipkart/migrations/: 0001_initial.py  0002_remove_product_category_product_category.py  0003_brand_vendor_and_more.py  0004_availability_mobile_specification_and_more.py  0005_alter_availability_options_alter_mobile_options_and_more.py  0006_alter_mobile_availability_alter_mobile_brand_and_more.py
mobile/: admin.py  models.py
mobile/migrations/: 0001_initial.py  0002_alter_connectivity_bluetooth_version_and_more.py  0003_alter_general_sim_type.py  0004_alter_battery_stand_by_time_alter_battery_talktime_and_more.py  0005_alter_general_sim_type.py  0006_alter_general_sim_type.py  0007_alter_general_sim_type.py
productapi/: asgi.py  settings.py  urls.py  wsgi.py
productimage/: admin.py  apps.py  models.py
productimage/migrations/: 0001_initial.py
